--- a/_includes/timeline/ph4-trans.html
+++ b/_includes/timeline/ph4-trans.html
@@ -89,7 +89,7 @@
             <th>Titan</th>
           </tr>
           <tr>
-            <td style="font-weight: 600">Surface Skyhook</td>
+            <td style="font-weight: 600; color: rgb(165, 165, 45)">Surface Skyhook</td>
             <td colspan="7"></td>
           </tr>
           <tr>
@@ -106,7 +106,7 @@
             <td>Anchor, km</td>
             <td>10000</td>
             <td>7000</td>
-            <td>7000</td>
+            <td>6500</td>
             <td>7000</td>
             <td>5980<sup class="note tooltip" data-tooltip-content="#phobosAnchor">[?]</sup></td>
             <td>4900</td>
@@ -123,7 +123,7 @@
             <td>20000</td>
           </tr>
           <tr>
-            <td style="text-align: center"><i>Lower Tether</i></td>
+            <td style="text-align: center; color: rgb(165, 165, 45)"><i>Lower Tether</i></td>
             <td></td>
             <td></td>
             <td></td>
@@ -163,7 +163,7 @@
             <td>227</td>
           </tr>
           <tr>
-            <td style="text-align: center"><i>Upper Tether</i></td>
+            <td style="text-align: center; color: rgb(165, 165, 45)"><i>Upper Tether</i></td>
             <td></td>
             <td></td>
             <td></td>
@@ -213,7 +213,7 @@
             <td>84.7</td>
           </tr>
           <tr>
-            <td style="font-weight: 600">Launch Skyhook</td>
+            <td style="font-weight: 600; color: rgb(165, 165, 45)">Launch Skyhook</td>
             <td colspan="7"></td>
           </tr>
           <tr>
@@ -240,14 +240,14 @@
             <td>Tip, km</td>
             <td>10000</td>
             <td>6500</td>
-            <td>6500</td>
+            <td>6350</td>
             <td>15000</td>
             <td>9000</td>
             <td>11000</td>
             <td>20000</td>
           </tr>
           <tr>
-            <td style="text-align: center"><i>Lower Tether</i></td> <td></td> <td></td> <td></td> <td></td> <td></td> <td></td> <td></td>
+            <td style="text-align: center; color: rgb(165, 165, 45)"><i>Lower Tether</i></td> <td></td> <td></td> <td></td> <td></td> <td></td> <td></td> <td></td>
           </tr>
           <tr>
             <td style="text-align: right">Mass, kt</td>
@@ -279,7 +279,7 @@
             <td>10</td><!--titan-->
           </tr>
           <tr>
-            <td style="text-align: center"><i>Upper Tether</i></td> <td></td> <td></td> <td></td> <td></td> <td></td> <td></td> <td></td>
+            <td style="text-align: center; color: rgb(165, 165, 45)"><i>Upper Tether</i></td> <td></td> <td></td> <td></td> <td></td> <td></td> <td></td> <td></td>
           </tr>
           <tr>
             <td style="text-align: right">Mass, kt</td>
@@ -448,6 +448,19 @@
       <p>The initial anchor mass is a metal asteroid massing 300 kt, and then carbonaceous asteroids are tacked onto that. Within 2 years the anchor masses over 2 megatons. By the end of this phase, both it and it's sister skyhook have anchors massing over 20 megatons. </p>
       <p>An impressive complement of high-specific-impulse VASIMR and Neumann drives are attached to its tip platform and its anchor. In addition to solar panels, there are nuclear reactors providing electricity for the drives. Those reactors can also power nuclear thermal LANTR engines in an emergency for quick orbital corrections or avoidance maneuvers. In fact even the high-I<sub>sp</sub> drives aren't used much, and rarely at full power. Most orbital correction is done with the release and retrieve and by playing catch with the Moon, as described above under Optmizing Inner Solar System Traffic. The drives have to be there in case of emergency. Sometimes they are useful for helping a troubled ship come in to dock, by putting the dock in front of it. </p>
       <p>As the Van Allen belts have been drained, they are no issue for Anshar. It and its sister are tilted 25&deg; to the equator to put them on the plane of the ecliptic. </p>
+      <details>
+        <summary><h5>High Volume Traffic on Anshar</h5></summary>
+        <p>The foot of Anshar Station moves above the surface of Earth at only 2.4 km/s. That is less than a third of the speed needed to attain orbit. The first stages of rockets get up to speeds around 1.5 to 1.8 km/s during launch. Most of the ships arriving at its foot platform are two stage rockets designed for complete reuse thousands of times. A few use other technologies and are also completely reusable. The market for rockets that fly directly to space disappears almost completely.
+        </p>
+        <p>Scramjets would be another possibility for reaching the foot platform, but they are much more demanding technology. Standard rockets are likely to remain the cheapest and most reliable option. Air launch might become more attractive. The impact on launcher design of the low speed and low altitude of the platform would be great.
+        </p>
+        <p>Whatever the cheapest launcher design for high volume traffic is, the cost of launching a kilogram to Anshar would be a tiny fraction of that cost today. Building Anshar of course was expensive, but maintenance and repair of it is cheap. This is true of all the skyhooks. The price offered to get from the surface of Earth to Anshar Station quickly drops to US$30 per kg. The price from there to a lunar colony is another US$30 per kg.
+        </p>
+        <p>Cargo coming in from Anshar costs considerably less. Slag left over from other processes happening on the anchor is used to make simple disposable heat shields, and cargo pods fitted with such a shield are simply be dropped from the foot platform to splash down in an ocean. The pod has a beacon so it can be recovered, and parachutes to brake its descent during the last kilometer or two. The pods don't weigh very much, once the heat shield is popped off and allowed to sink to the bottom of the ocean. A standard cargo flight returns hundreds of them to Anshar Station. A standard pod for 3 metric tons of cargo weighs only 50 kg when empty, and without its heat shield. Cost per kg for that incoming trip is only US$2.
+        </p>
+        <p>A hollow sphere of metal can be dropped for even less. Stick a disposable heat shield on the bottom and give it a cheap beacon, and forget about the pod and the parachutes. Mining asteroids for any metal with a price higher than a few dollars a kilogram then becomes competitive.
+        </p>
+      </details>
       <p>Further aspects of Anshar are discussed under the Anshar Station section.</p>
     </details>
     <details>
@@ -455,22 +468,26 @@
         <p>Construction on the sister skyhook of Anshar, which is the launch skyhook in the table above, starts  right after Anshar is complete. It is named after another ancient sky god, Hepit. Its upper cable masses 2.2 megatons all by itself, far bigger than any other cable. To seat the center of gravity of the skyhook at the correct point, a foot station is built on it that masses 400 kilotons.</p>
         <p>Then 10 mini-skyhooks are built to complete an observation and telecoms infrastructure for Earth. 4 fill in the rest of the plane Anshar is in, 72&deg; apart on it. The other 5 are in a plane that complements that, with an ascending node exactly on the other side of the planet. They have orbital periods that match Anshar, circling the Earth every 4 hours and 15 minutes. They can only bear spacecraft massing 200 tons, and their upper tethers are only 1000 km long.  </p>
         <p>These skyhooks take over a large fraction of Earth's internet and telecoms service. The skyhooks are bases for servicing and launching of satellites, taking over those duties from the free-flying space stations, as access to them is cheaper and easier. Small Hoppers stationed on them do orbital debris cleanup duty. They are observation platforms with a broad suite of instruments - telescopes across all wavelengths, radar, lidar, monitoring of the magnetosphere and radiation around Earth, gravimetry.</p>
-        <p>Together, this set of skyhooks eliminate the necessity of most other satellites in Earth orbit. That allows the vast majority of them to be cleared away to ensure the skyhooks need not worry about colliding with them. Deals are made with operators of satellites being cleared to move their operations onto the skyhooks. Debris in orbit has been mostly handled by the time these events occur and satellites have been slotted into orbits posing no risk to the planned skyhooks for the previous 15 years or so. </p>
+        <p>Together, this set of skyhooks eliminates the necessity for most other satellites in Earth orbit. That allows the vast majority of them to be cleared away so the skyhooks need not worry about colliding with them. Deals are made with operators of satellites being cleared to move their operations onto the skyhooks. Debris in orbit has been mostly handled by the time these events occur and satellites have been slotted into orbits posing no risk to the planned skyhooks for the previous 15 years or so.</p>
+        <p>The space stations are moved to orbits just in front of and behind Anshar, where shuttles can very easily hop between them and the skyhook.
+        </p>
     </details>
     <details>
       <summary><h5>Horizontal Takeoff and Landing, and Rejigging the Lunar Skyhooks</h5></summary>
-      <p>As shipping volumes increase, and construction at scale becomes widespread, new shuttles are scaled down from the size of recent generations. They can still haul up to 60 tons, but their engines are far smaller, and no longer nuclear. They have just enough thrust to overcome lunar gravity, but that capacity is only used in an emergency. Normally, their engines only fire to do the maneuvering needed to match vector and speed with skyhook foot platforms, then to line up the landing when returning to a runway.
+      <p>As shipping volumes increase, and construction at scale becomes widespread, new shuttles are scaled down from the size of recent generations. They are for a fixed system that launches them at a high cadence. They can still haul up to 60 tons, but their engines are smaller, and no longer nuclear. They have enough thrust to overcome lunar gravity, with a thrust to weight ratio of around 1.5 when fully loaded. When they launch to Gagarin, they lift off from a runway that accelerates them up to the needed speed and throws them off the end in an arc that peaks just above the altitude of Gagarin's foot platform. Their engines fire only to do the maneuvering for matching vector and speed with the platform. During normal operation, the launch is so precise their engines barely fire at all as they come in and dock. On return, their engines brake their descent, and the runway brakes their horizontal motion.
       </p>
-      <p> It becomes typical to launch a bunch of them in quick succession while the surface skyhook is in range, up to 50. Each one docks in the vertical stack of docking spaces that now extend up the foot of the skyhook. They are called Geese for the organized way they usually fly all in a row.
+      <p>
+      This runway is 15 km long and sloped 60&deg; at the end. The speed at lift-off is about 300 m/s. There is another runway running north-south for traffic with polar skyhooks, with the same length and upward slope at the end. There is also an east-west runway designed for launch to Magnificent Desolation. The horizontal speed needed to reach its foot station is 860 m/s, so it is longer, with less of an upwards slope - 27 km and 17&deg;.
       </p>
-      <p>This works because a spaceport is built 35 km northeast of Lalande on a low mountain located there. Eight runways radiate from the terminal buried under the peak, each 2.5 km long. The landing gear on the shuttles is powered through electrical contact made with a rail down the middle of each runway, and with this power they are accelerated up the slope until they have a ballistic trajectory at take-off sufficient to reach the skyhook. This can be done every 10 seconds. On landing, contact is made with that same rail, and the energy harvested from magnetic braking is passed back into the system.
+      <p>The landing gear on the shuttles is powered through electrical contact made with a rail down the middle of each runway. That power is what accelerates them up to speed, through electrical motors that turn their wheels.  After the shuttles have loaded and unloaded at the foot platform, they wait until the skyhook's next pass over Lalande, and then drop off. They return to the same runway, braking their descent with their own engines and touching down at the other end. On landing, electrical contact is made with that same rail, and as their wheels are slowed with magnetic braking, the generated energy is passed back into the system.
       </p>
-      <p>So, it isn't exactly horizontal take-off and landing, more like 30&deg; takeoff and landing. The electric rail system imparts about 250 to 300 m/s to the launching spacecraft, and can do that over a wide range of vehicle masses.
+      <p> It becomes typical to launch a bunch of these shuttles in quick succession while Gagarin is in range, up to 50. They can be launched at a cadence of up to one every 10 seconds. Each one docks in one of the docking spaces in the vertical stack that now extends up the foot of the skyhook. They are called Geese for the organized way they usually fly all in a row.
       </p>
-      <p>The big LNCs are converted to use these runways too. Their nuclear engines can bring them in on flat ground anywhere with no forward momentum, but at the spaceport they come in at 200 m/s or so and brake as they descend the slope to save fuel.
+      <p>Landing gear modules for the big LNCs are made so they can use these runways too, when delivering objects too big or heavy for the Geese, to Gagarin, polar skyhooks, or Inukshuk. The electric current infrastructure is sized to accelerate a fully loaded LNC up to the speed needed to rendezvous with Maggie's foot station. In fact, it is sized to launch a mother ship to Maggie. LNCs are designed for point to point service anywhere on the Moon, if need be. Though they get to places whenever possible by hitching rides on skyhooks, sometimes that is too slow. On such missions, their landing gear can be removed to maximize their payload capacity. In that case, they lift off and land vertically, as they did in the past.
       </p>
-      <p>Gagarin is moved to a higher orbit, at 7000 km, and all the polar skyhooks are raised to the same altitude to maintain their staggered orbital rhythm. The second equatorial skyhook is converted to the launcher skyhook. For this purpose its orbit is lowered to 1000 km, so it passes by Lalande 7 times for each time Gagarin passes by.</p>
-      <p>Over time, all the lunar skyhooks are converted from Zylon to CNT. The maintenance carts work on that as they are able. The 2nd equatorial skyhook has to be changed so much that is all done during it's conversion to the launch skyhook.
+      <p>Gagarin is moved to a higher orbit, at 7000 km, and all the polar skyhooks are raised to the same altitude to maintain their staggered orbital rhythm. Magnificent Desolation is converted to the launcher skyhook. For this purpose its orbit is lowered to 1000 km, so it passes by Lalande 7 times for each time Gagarin passes by.
+      </p>
+      <p>Over time, all the lunar skyhooks are converted from Zylon to CNT. The maintenance carts work on that as they are able. Maggie has to be changed so much that is all done during it's conversion to the launch skyhook.
       </p>
     </details>
     <details>
