--- a/_includes/timeline/residenceProgramChart.html
+++ b/_includes/timeline/residenceProgramChart.html
@@ -40,7 +40,8 @@
   <tr>
   <td colspan="4">
     <details>
-      <summary>Conditions</summary>Some single people now accepted, other conditions remain the same. Birth control policies remain the same. Administration is transferred to the Moon Agency and some RP astronauts are promoted into administrative posts.
+      <summary>Conditions</summary>Some single people now accepted, other conditions remain the same. Birth control policies remain the same. The requirement that only nations may sponsor residents is dropped. Many residents now arrive representing foundations, professional associations, and universities.<br><br>
+      Administration is transferred to the Moon Agency and some RP astronauts are promoted into administrative posts.
     </details></td>
   </tr>
   <tr>
@@ -49,7 +50,7 @@
   <tr>
   <td colspan="4">
     <details>
-      <summary>Conditions</summary>Greater proportion of singles accepted. Residents may now be sponsored by groups other than nations, but not by commercial entities. Some residents arrive representing foundations, professional associations, and universities. Corporate interests may provide funding, but may not directly sponsor a resident. The Moon Agency becomes more mixed between the ISA nations and RP astronauts from other countries.
+      <summary>Conditions</summary>Greater proportion of singles accepted. Private citizens may now apply, but must qualify, including training, and may not be more than a third of the group. Business interests may provide funding, but may not directly sponsor a resident. Contracts between accepted residents and businesses must be for a fixed time period and be reviewed by the Moon Agency.<br><br> The Moon Agency becomes more mixed between the ISA nations and RP astronauts from other countries.
     </details></td>
   </tr>
   <tr>
@@ -58,7 +59,7 @@
   <tr>
   <td colspan="4">
     <details>
-      <summary>Conditions</summary>The Anshar skyhook orbiting Earth is finished, and because this makes transport so much cheaper, about 1000 of these astronauts are younger married couples around age 30 who have no children but plan to have some. As it is not known how pregnancy and childhood on the Moon will play out, but danger is probable, these couples are advised that should they become pregnant, they must return to Earth for the pregnancy and the first years of the child's life. They may then return to the Moon. The child will be carefully monitored and the family will return to Earth if a threat to the child's health is detected. Qualification still based on education - seeking a majority of people with strong science and engineering backgrounds, but a significant minority with superlative humanities backgrounds.
+      <summary>Conditions</summary>The Anshar skyhook orbiting Earth is finished, and because this makes transport so much cheaper, about 2000 of these astronauts are younger married couples around age 30 who have no children but plan to have some. As it is not known how pregnancy and childhood on the Moon will play out, but danger is probable, these couples are advised that should they become pregnant, they must return to Earth for the pregnancy and the first years of the child's life. They may then return to the Moon. The child will be carefully monitored and the family will return to Earth if a threat to the child's health is detected.<br><br> Private citizens may form up to half the group, but must qualify, including training. Qualification in education may now be an advanced degree of any kind, or a successful career in the arts or sports. Private applicants are permitted to have only an undergraduate degree.
     </details></td>
   </tr>
   <tr>
@@ -67,7 +68,7 @@
   <tr>
   <td colspan="4">
     <details>
-      <summary>Conditions</summary>The requirement of sterility is eliminated, and the average age of the astronauts drops to near 30. Risks regarding pregnancy and growing children living in space are significant, but have solutions. For the sake of argument, we shall posit the first 6 weeks of pregnancy is not affected by conditions in the lunar colonies, and that children over three can be healthy there, if a careful program is followed that involves extensive centrifuge use, a carefully designed exercise program, and possibly supplements and medication. This is simply an educated guess as to what might be sufficient.
+      <summary>Conditions</summary>The requirement of sterility is eliminated, and the average age of the astronauts drops to near 30. Risks regarding pregnancy and growing children living in space are significant, but have solutions. For the sake of argument, we shall posit the first 6 weeks of pregnancy is not affected by conditions in the lunar colonies, and that children over three can be healthy there, if a careful program is followed that involves extensive centrifuge use, a carefully designed exercise program, and possibly supplements and medication. This is simply an educated guess as to what might be sufficient.<br><br>There is now no limit on how many private citizens may apply, but applicants backed by a recognized group get priority. All applicants must have at least an undergraduate degree.
   </details></td>
   </tr>
  </table>
