--- a/_includes/timeline/ph1-robots.html
+++ b/_includes/timeline/ph1-robots.html
@@ -1,6 +1,6 @@
 <article class="column" id="RobotRoverTests">
   <details>
-  <summary><h5><a href="machines.html#robots">Robot and Rover  Mission</a></h5></summary>
+  <summary><h5><a href="machines.html#robots">Robot </a>and Rover Mission</h5></summary>
 <p>Each of the 2 LNCs delivers equipment to the base site on the west rim of Hinshelwood crater, each returning once to the Pod Ship to land it all. They land 80 tons of robots, equipment, and supplies, and enough water for the hydrolysis pod to produce the fuel needed for them to make it back to orbit. The robots are tele-operated from Earth at first. That work is around the clock, but because there is a transmission delay of about 3 seconds, work is slow and tedious, and the kinds of activities that are possible is limited. Once Crossroads has a crew, they start taking over the remote operation. More things can then be accomplished, and faster. Some operation is still done from Earth.</p>
 <details>
 <summary>Initial tasks done by robots</summary>
