minor copy editing to timeline
Former-commit-id: dbeeec82c06f71042a20f2646e3099a816b469af

--- a/_includes/machines/machinesPower.html
+++ b/_includes/machines/machinesPower.html
@@ -3,6 +3,8 @@
 		<div class="outerDiv">
 			<div class="innerDiv">
 				<h1>Power Infrastructure</h1>
+				<p>Four power sources make sense on the Moon, three of which are variants on solar power. There's photovoltaic solar cells directly changing sunlight into electricity. That makes the most sense at the lunar poles, where there are places with sun most of the time. There's solar thermal power, where the heat of the sun is used to drive turbines or Stirling engines. That makes sense when it can be combined with other processes for producing materials, such as for glass production. A good design at large scale can continue to produce power at a pretty steady level all through the night, that is the purpose of the STePP units. There's space-based solar power, where photovoltaics are placed in orbits that keep them in sunlight all the time, and then that power is beamed as microwaves to the surface. This is an excellent approach once there is a bit more infrastructure, and is the largest source of power on the Moon in the long term. Then there is nuclear power. Nuclear reactors are the most versatile and reliable power source and therefore always have a place. 
+				</p>
 				<p>
 					Unless you go back to plans from the 70s, reference to
 					nuclear power has completely disappeared from proposals
