--- a/_includes/machines/machinesPowerNuclear.html
+++ b/_includes/machines/machinesPowerNuclear.html
@@ -6,21 +6,15 @@
 				<p>
 					We'll come back to nuclear reactor designs in the Transportation
 					section below, but there is a link in the sidebar to a very good
-					overview of the matter, in power-point format. The current
-					model Moonwards has for a nuclear plant on the
-					lunar surface is quite crude. Expanding it into a
-					good representation of a working reactor in space would be great
-					for educational purposes. That is a goal for all the models of
-					course, but as nuclear generators are so very misunderstood it
-					is especially appealing to make that model. (Alas, i don't know
-					how to interpret and adapt the drawings i've found of such
-					things very well. When i work next work on it i'll seek consultations
-					on the matter.)
-				</p>
-				<p>
-					On slide 35 is a great comparison: "Standing next to a
+					overview of the matter, in power-point format. On slide 35 is a great comparison: "Standing next to a
 					NTP [Nuclear Thermal Propulsion] engine before launch
 					for one year is less radiation than a diagnostic x-ray".
+				</p>
+				<p>The wiki page for <a href="https://github.com/briligg/moonwards/wiki/Nuclear-Reactors------Kilopower-(KRUSTY)">Nuclear Reactors</a> on the Github repo summarizes several papers on the Kilopower project at NASA's Glenn Research Center. These designs aim at creating small, tough nuclear reactors that are easy to set up and maintain, in support of human missions to Mars or the Moon. The reactor model for the early construction phase of Cernan's Promise will be based on that design.
+				</p>
+				<p>The fuel rods for reactors weigh so little compared to the vast energy that can be tapped from them, it will be a long time before it is cheaper to fabricate fuel rods on the Moon than to import them for Earth. One ton of fuel from Earth could power a 30 MW reactor for 6 years. The soil around Lalande Crater has the Moon's highest contents of thorium, and it is reasonable to suppose that once excavation was done, deposits with much higher thorium and uranium contents would probably be found in that region. Since these deposits are also associated with a high content of many rare earth elements, it may prove economical sooner to process them if all of those elements are thus extracted. Thoria and urania, the oxides of thorium and uranium, are useful for other things besides nuclear fuel, which also improves the argument for mining them. The development that justifiees nuclear fuel production on-site in our timeline is on-site manufacture of nuclear thermal rocket engines.
+				</p>
+				<p>The absence of air and water on the Moon really simplifies the use of nuclear power. There is no need to think about radioactive waste leaking over the long term because there is no water table or air to carry radioactive particles away from a waste dump. For the same reasno, the impact of a meltdown accident would be minimal. In fact, putting radiation shielding around a reactor is just a matter of piling up a sufficient thickness of the surrounding regolith, or digging a deep enough pit. There is no biosphere to protect, no weather to think about.
 				</p>
 			</div>
 		</div>
