--- a/_includes/machines/machinesTransport.html
+++ b/_includes/machines/machinesTransport.html
@@ -4,30 +4,13 @@
 			<div class="innerDiv">
 				<h1>Transport</h1>
 				<p>
-					About 3/5 of the velocity needed to get to the Moon has to be
-					acquired just to get to orbit around Earth. So, unless you make
-					that part cheap and reliable, getting to the Moon is always going to
-					be extremely expensive. We are going to do something nifty about
-					half way along the current timeline to achieve that - build a tether
-					that would actually be practical in Earth orbit. Let us come back
-					to that.
-				</p>
-				<p>
-					After you get to Earth orbit, getting safely to the Moon's
-					surface involves a speed change of around 6 km/s, which is 21,600 km/h
-					or 13,400 mph. The last part of that involves braking from a speed of
-					close to 2 km/s (4500 mph) to a speed close enough to zero when you
-					reach the lunar surface for a safe landing. Transport in space is a
-					really big deal.
-				</p>
-				<p>
-					The plans for the transport system for Moonwards haven't been
-					modeled yet, but they have been thought about. That contemplation is
-					what first led to the policy of 'politics and budgets be damned,
-					we're going to examine what we <strong>could</strong> do in space
-					if we tried'. The question of transport is where it is really striking
-					how much our capabilities would change if we made a serious commitment.
-				</p>
+ About 3/5 of the speed changes needed to get to the Moon have to be acquired just to get to orbit around Earth. So, unless you make that part cheap and reliable, getting to the Moon (or any place beyond Earth) is always going to be extremely expensive. Completely reusable rockets are absolutely necessary for settlement of space. If SpaceX had not already demonstrated that we are close to that day, this project would have little relevance. It's also generally agreed that fuel depots in orbit are necessary. This is addressed early in the timeline using water ice mined from the lunar north pole to provide liquid hydrogen and oxygen (hydrolox) fuel at a new space staion in low Earth orbit. Several investigators have contemplated such an architecture. The work of <a href="http://www.spudislunarresources.com/">Paul Spudis</a> and  <a href="https://denniswingo.wordpress.com/">Dennis Wingo</a> are fine examples. The ultimate dream is a space elevator that a car can simply climb up and reach space. We instead have chosen vertical skyhooks for this - giant cables that hang in orbit but don't reach the atmosphere. When everything is considered, they have advantages over a space elevator that make them the better option even once we have materials strong enough for an elevator.</p>
+<p>
+	After you get to Earth orbit, getting safely to the Moon's surface involves a speed change of around 6 km/s, which is 21,600 km/h or 13,400 mph. The last part of that involves braking from a speed of close to 2 km/s (4500 mph) to a speed close enough to zero when you reach the lunar surface for a safe landing. Transport in space is a really big deal.
+</p>
+<p>
+	The question of transport is where it is really striking how much our capabilities would change if we made a serious commitment. Mining ice for fuel depots and building skyhooks would be very expensive at the beginning, but they are cheap once traffic is high. The question is whether there is enough to do in space that traffic will indeed explode. The virtual colonies will demonstrate that there is.
+</p>
 			</div>
 		</div>
 	</section>
