--- a/_includes/timeline/residenceProgramChart.html
+++ b/_includes/timeline/residenceProgramChart.html
@@ -13,7 +13,7 @@
   <tr>
   <td colspan="4">
     <details>
-      <summary>Conditions</summary>Only couples married >10 yr, over 40, no kids under 18, min. B.Sc. or B.Eng but higher preferred, one of couple post-doc or experienced pro, arts or sports ability. Note: Qualifications for all rounds are announced several years before it begins, leaving plenty of time for interested people to upgrade skills so they can apply.
+      <summary>Conditions</summary>Only couples married >10 yr, over 40, with no kids under 18, min. B.Sc. or B.Eng but higher preferred, one of couple post-doc or experienced pro, arts or sports ability. Note: Qualifications for all rounds are announced several years before they begin, leaving plenty of time for interested people to upgrade skills so they can apply.
     </details></td>
   </tr>
   <tr>
@@ -40,7 +40,7 @@
   <tr>
   <td colspan="4">
     <details>
-      <summary>Conditions</summary>Some single people now accepted, other conditions remain the same. Birth control policies remain the same. The requirement that only nations may sponsor residents is dropped. Many residents now arrive representing foundations, professional associations, and universities.<br><br>
+      <summary>Conditions</summary>Some single people now accepted, other conditions remain the same. Birth control policies remain the same. The requirement that only nations may sponsor residents is dropped. Many residents now arrive representing foundations, professional associations, religious institutions, and universities.<br><br>
       Administration is transferred to the Moon Agency and some RP astronauts are promoted into administrative posts.
     </details></td>
   </tr>
@@ -68,7 +68,7 @@
   <tr>
   <td colspan="4">
     <details>
-      <summary>Conditions</summary>The requirement of sterility is eliminated, and the average age of the astronauts drops to near 30. Risks regarding pregnancy and growing children living in space are significant, but have solutions. For the sake of argument, we shall posit the first 6 weeks of pregnancy is not affected by conditions in the lunar colonies, and that children over three can be healthy there, if a careful program is followed that involves extensive centrifuge use, a carefully designed exercise program, and possibly supplements and medication. This is simply an educated guess as to what might be sufficient.<br><br>There is now no limit on how many private citizens may apply, but applicants backed by a recognized group get priority. All applicants must have at least an undergraduate degree.
+      <summary>Conditions</summary>The requirement of sterility is eliminated, and the average age of the astronauts drops to near 30. Risks regarding pregnancy and growing children living in space are significant, but have solutions. For the sake of argument, we shall posit the first 6 weeks of pregnancy is not affected by conditions in the lunar colonies, and that children over three can be healthy there, if a careful program is followed that involves extensive centrifuge use, a carefully designed exercise program, and supplements and medication. This is simply an educated guess as to what might be sufficient.<br><br>There is now no limit on how many private citizens may apply, but applicants backed by a recognized group get priority. All applicants must have at least an undergraduate degree. A successful career in the arts or sports is accepted as a substitute in some cases.
   </details></td>
   </tr>
  </table>
