--- a/_includes/transport/transportNuclearShuttles.html
+++ b/_includes/transport/transportNuclearShuttles.html
@@ -16,17 +16,23 @@
 					a century ago, we'd be living in a completely different world.
 				</p>
 				<p>
-					Nuclear ships could attain a specific impulse of 900 to 1000 seconds
+					Nuclear thermal ships could attain a specific impulse of 900 to 1000 seconds
 					if we rebuilt that 1960s technology. That's a measure of propellant efficiency.
 					Another way of saying it is that a nuclear engine could heat its
 					fuel so hot it would be moving at 9000 to 10 000 m/s when it exited
 					the rocket nozzles. That speed is what determines how hard the
 					rocket is pushed in the opposite direction by that exhaust.
 					The best chemical rockets have exhaust velocities
-					of 4400 m/s in space, so a nuclear engine could speed up or slow
-					down a ship by twice as much as the best chemical engines we have.
-					The virtual colonies use them as shuttles from the lunar surface
-					to lunar orbit. That involves about 4 km/s of delta V for a round trip. Cargo ships coming to lunar orbit can have larger payloads by handing off their cargo to the shuttle and staying in orbit. More information about how a nulclear rocket engine works can be found on the <a href="wackyTech.html#nuclear">tech site</a>.
+					of 4400 m/s in space, so a nuclear engine speeds up or slows
+					down a ship twice as fast as the best chemical engines we have.
+				</p>
+				<p>
+					The first lunar missions use Lunar Nuclear Craft (LNCs, pronounced 'links') between the lunar surface and lunar orbit. That involves about 4 km/s of delta V for a round trip before the skyhook is set up. Cargo ships coming to lunar orbit can have larger payloads by handing off their cargo to the shuttle and staying in orbit. The LNCs achieve better performance overall by using a <a href="https://ntrs.nasa.gov/search.jsp?R=20170004744&hterms=lantr+nuclear+thermal&qs=N%3D0%26Ntk%3DAll%26Ntx%3Dmode%2Bmatchallany%26Ntt%3Dlantr%2Bnuclear%2Bthermal">LANTR design</a>. They get thrust by superheating hydrogen, and during launch and landing, can greatly augment that thrust by injecting oxygen into the engine nozzle, basically like an afterburner. A recently developed version of this technology is the <a href="http://www.alternatewars.com/BBOW/Space_Engines/AIAA-2004-3863_TRITON.pdf">Triton engine</a> from Pratt & Whitney. It uses a closed Brayton cycle to also use the reactor as a power source. </p>
+					<p>
+						The LNCs use a cluster of seven such engines to maximize flexibility and reliability. During early missions, when the LNC is landed the entire reactor assembly, including the power generators, has to be dismounted and lowered into a shaft so the neutron and gamma radiation doesn't affect the surrounding base. The structures of the base are nearby, and the LNCs are used for comms, power, power distribution, and even as a simple crane, with their robotic arm. When a LNC prepares for launch, its engine assembly is raised again and remounted. The LNCs are designed for vertical landing and takeoff.
+				</p>
+				<p>
+					A good explanation of how nuclear thermal rocket engines work is on our <a href="wackyTech.html#nuclear">tech page</a>.
 				</p>
 			</div>
 		</div>
